--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  android:background="#000000">
+
 <ImageView android:id="@+id/ImageView01"
            android:layout_centerInParent="true"
-           android:layout_centerVertical="true"
-           android:layout_centerHorizontal="true"
-           android:scaleType="center"
+           android:scaleType="fitCenter"
            android:src="@drawable/splash"
            android:layout_width="match_parent"
-           android:layout_height="match_parent"></ImageView>
-</LinearLayout>
+           android:layout_height="match_parent"
+           android:scaleX="0.75"
+           android:scaleY="0.75"></ImageView>
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="A Game by Thalapaneni Gajendra"
+    android:textSize="14sp"
+    android:textStyle="bold"
+    android:textColor="#FFFFFF"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="24dp"
+    android:letterSpacing="0.05"
+    android:alpha="0.8" />
+
+</RelativeLayout>
