--- a/app/src/main/res/drawable/player_avatar.xml
+++ b/app/src/main/res/drawable/player_avatar.xml
@@ -7,7 +7,7 @@
 
     <!-- Simple player avatar - smiley face -->
     <path
-        android:fillColor="#4317D5"
+        android:fillColor="#22C822"
         android:pathData="M24,4C12.95,4 4,12.95 4,24s8.95,20 20,20s20,-8.95 20,-20S35.05,4 24,4z"/>
 
     <!-- Eyes -->
